--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ description: 专业开放自由
 
 
 	<section class="bottom-cta">
-		<h2 class="editable">选择最适合自己的<strong>量化交易工具</strong> </h2>
-		<div class="button alt"><a href="#">开始学习</a></div>
+		<h2 class="editable">如果您有一技之长或需要有偿帮助 </h2>
+		<div class="button alt"><a href="{{ site.baseurl }}/contact/">欢迎联系我们</a></div>
 	</section>
 </div>
