完成初步建设

--- a/contact.html
+++ b/contact.html
@@ -31,15 +31,13 @@ map:
 		<h3 class="editable">专业技能, 邮件格式:</h3>
 		<br>
 		<p>编程语言: (C++/Python)</p>
-		<p>擅长技能: (策略编写/系统搭建/数据分析...)</p>
-		<p>擅长系统: (WonderTrader/vnpy/MT5/CCXT/Freqtrade)</p>
-		<p>参考价格: (100元/小时工作量)<br></p>
+		<p>擅长技能: (策略/系统/数据...)</p>
+		<p>擅长系统: (WT/vnpy/MT5/CCXT/FT)</p>
 
 		<h3 class="editable">需求服务, 邮件格式:</h3>
 		<br>
 		<p>需求内容: (指标编写, 系统搭建...)</p>
 		<p>详细描述: (...)</p>
-		<p>参考价格: (1000元)</p>
 
 		<h3 class="editable">Address</h3>
 		<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
