--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ description: 专业开放自由
 			<div class="text editable">
 				<h2>
 					<a target="_blank" href="https://docs.ccxt.com/en/latest/index.html">
-						CCXT: <strong>接口最丰富</strong> 的数字货币交易系统
+						CCXT: <strong>最全面</strong> 的数字货币交易所接口
 					</a>
 				</h2>
 				<p>CCXT是一个Python/JavaScript/PHP开发库. 使用CCXT可以快速访问几乎所有数字货币交易所的数据, 用于相关的软件工程</p>
